--- a/estilo/style.css
+++ b/estilo/style.css
@@ -99,3 +99,19 @@ footer {
     padding: 10px;
     font-size: 2.5vh;
 }
+
+.testeimg {
+         width: 67vh;
+        height: 50vh;
+        max-width: 670px;
+        min-width: 280px;
+        
+}
+
+section#div.testeimg {
+    text-align: center;
+    background-color: chartreuse;
+ 
+
+}
+
