--- a/estilo/style.css
+++ b/estilo/style.css
@@ -101,10 +101,9 @@ footer {
 }
 
 .testeimg {
-         width: 67vh;
-        height: 50vh;
-        max-width: 670px;
-        min-width: 280px;
+         width: 422px;
+        height: 265px;
+        
         
 }
 
